--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 05:05:02 2018</p>
+         Last Run: Wed Oct 31 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>7</td>
-                        <td>81</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>32</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>3</td>
                         <td>1</td>
                         <td>6</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SSW</td>
-                        <td>31</td>
+                        <td>SW</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>62</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>33</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -162,7 +162,7 @@
                "data":[
                  "7",
                  "6",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "71",
+                 "80",
+                 "70",
                  "62"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "32",
-                 "31",
-                 "33"
+                 "23",
+                 "21",
+                 "25"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 05:05:02 2018</p>
+         Last Run: Wed Oct 31 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,7 +253,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>96</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,7 +261,7 @@
                         <td>8</td>
                         <td>6</td>
                         <td>24</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
@@ -272,10 +272,10 @@
                         <td>Overcast</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>23</td>
+                        <td>22</td>
                         <td>51</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
                         <td>92</td>
                      </tr>
@@ -377,7 +377,7 @@
                "data":[
                  "31",
                  "24",
-                 "23"
+                 "22"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "56",
-                 "53",
+                 "54",
                  "51"
                ]
              },
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "96",
+                 "97",
                  "94",
                  "92"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 05:05:02 2018</p>
+         Last Run: Wed Oct 31 06:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,11 +460,11 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-4</td>
-                        <td>30</td>
-                        <td>79</td>
+                        <td>24</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
@@ -472,10 +472,10 @@
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>31</td>
+                        <td>24</td>
                         <td>79</td>
                         <td>0</td>
                         <td>6</td>
@@ -590,8 +590,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "30",
-                 "31",
+                 "24",
+                 "24",
                  "14"
                ]
              },
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
+                 "78",
                  "79",
                  "81"
                ]
