--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 15:05:02 2018</p>
+         Last Run: Wed Oct 31 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>7</td>
-                        <td>80</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>16</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>3</td>
                         <td>1</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>69</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>15</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>4</td>
-                        <td>61</td>
+                        <td>5</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>16</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "1",
                  "4"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "0",
                  "3",
                  "6"
                ]
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "7",
-                 "5",
-                 "4"
+                 "6",
+                 "5"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
+                 "82",
                  "69",
-                 "61"
+                 "58"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
                  "15",
-                 "16"
+                 "18",
+                 "22"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 15:05:02 2018</p>
+         Last Run: Wed Oct 31 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -246,38 +246,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>8</td>
-                        <td>6</td>
+                        <td>9</td>
+                        <td>9</td>
                         <td>40</td>
-                        <td>54</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>WSW</td>
-                        <td>96</td>
+                        <td>W</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>34</td>
-                        <td>52</td>
+                        <td>32</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>92</td>
+                        <td>WNW</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Mostly Cloudy</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>34</td>
-                        <td>51</td>
-                        <td>0</td>
+                        <td>24</td>
+                        <td>50</td>
+                        <td>1</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>91</td>
+                        <td>67</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "6",
+                 "9",
                  "9",
                  "9"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "8",
+                 "9",
                  "9",
                  "9"
                ]
@@ -376,8 +376,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "40",
-                 "34",
-                 "34"
+                 "32",
+                 "24"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
                  "52",
-                 "51"
+                 "51",
+                 "50"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "96",
-                 "92",
-                 "91"
+                 "72",
+                 "68",
+                 "67"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 15:05:02 2018</p>
+         Last Run: Wed Oct 31 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,36 +463,36 @@
                         <td>Snow Showers</td>
                         <td>-2</td>
                         <td>-4</td>
-                        <td>42</td>
-                        <td>79</td>
+                        <td>32</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WSW</td>
-                        <td>80</td>
+                        <td>WNW</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-2</td>
-                        <td>-4</td>
-                        <td>36</td>
-                        <td>79</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>30</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>W</td>
-                        <td>82</td>
+                        <td>NW</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>15</td>
-                        <td>81</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>11</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WNW</td>
-                        <td>81</td>
+                        <td>NW</td>
+                        <td>87</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,8 +520,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-4",
-                 "-6"
+                 "-6",
+                 "-7"
                ]
              },
              {
@@ -532,8 +532,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-2",
-                 "-3"
+                 "-3",
+                 "-4"
                ]
              }
            ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "42",
-                 "36",
-                 "15"
+                 "32",
+                 "30",
+                 "11"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
-                 "79",
-                 "81"
+                 "80",
+                 "80",
+                 "83"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "82",
-                 "81"
+                 "88",
+                 "88",
+                 "87"
                ]
              }
            ]
