--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 16:05:02 2018</p>
+         Last Run: Wed Oct 31 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 16:05:02 2018</p>
+         Last Run: Wed Oct 31 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Chance of Rain</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>40</td>
+                        <td>44</td>
                         <td>52</td>
                         <td>1</td>
                         <td>11</td>
@@ -260,12 +260,12 @@
                         <td>Chance of Rain</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>32</td>
+                        <td>37</td>
                         <td>51</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>WNW</td>
-                        <td>68</td>
+                        <td>W</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>67</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,8 +375,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "40",
-                 "32",
+                 "44",
+                 "37",
                  "24"
                ]
              },
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "72",
-                 "68",
-                 "67"
+                 "70",
+                 "69"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Oct 31 16:05:02 2018</p>
+         Last Run: Wed Oct 31 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,8 +463,8 @@
                         <td>Snow Showers</td>
                         <td>-2</td>
                         <td>-4</td>
-                        <td>32</td>
-                        <td>80</td>
+                        <td>35</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WNW</td>
@@ -472,11 +472,11 @@
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>30</td>
-                        <td>80</td>
+                        <td>24</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NW</td>
@@ -485,10 +485,10 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>-4</td>
-                        <td>-7</td>
-                        <td>11</td>
-                        <td>83</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>13</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NW</td>
@@ -521,7 +521,7 @@
                "data":[
                  "-4",
                  "-6",
-                 "-7"
+                 "-6"
                ]
              },
              {
@@ -533,7 +533,7 @@
                "data":[
                  "-2",
                  "-3",
-                 "-4"
+                 "-3"
                ]
              }
            ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "32",
-                 "30",
-                 "11"
+                 "35",
+                 "24",
+                 "13"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "80",
-                 "83"
+                 "79",
+                 "79",
+                 "82"
                ]
              },
              {
